--- a/arch/arm/mach-rk30/Makefile
+++ b/arch/arm/mach-rk30/Makefile
@@ -1,13 +1,19 @@
 EXTRA_CFLAGS += -Os
-ifneq ($(CONFIG_RK_FPGA),y)
-obj-y += ../plat-rk/clock.o
-obj-$(CONFIG_ARCH_RK30XX) += clock_data.o
-obj-$(CONFIG_ARCH_RK3066B) += clock_data-rk3066b.o
-endif
 obj-y += common.o
 CFLAGS_common.o += -DTEXT_OFFSET=$(TEXT_OFFSET)
 obj-y += ddr.o
 obj-y += devices.o
+obj-y += pmu.o
+obj-y += reset.o
+obj-$(CONFIG_SMP) += platsmp.o headsmp.o
+obj-$(CONFIG_HOTPLUG_CPU) += hotplug.o
+obj-$(CONFIG_PM) += pm.o
+obj-$(CONFIG_CPU_IDLE) += cpuidle.o
+ifeq ($(CONFIG_ARCH_RK30),y)
+ifneq ($(CONFIG_RK_FPGA),y)
+obj-$(CONFIG_ARCH_RK30XX) += clock_data.o
+obj-$(CONFIG_ARCH_RK3066B) += clock_data-rk3066b.o
+endif
 obj-y += io.o
 ifeq ($(CONFIG_ARCH_RK30XX),y)
 obj-y += iomux.o
@@ -15,15 +21,9 @@ obj-$(CONFIG_CPU_FREQ) += cpufreq.o
 else
 obj-$(CONFIG_CPU_FREQ) += ../mach-rk3188/cpufreq.o
 endif
-obj-y += pmu.o
-obj-y += reset.o
 obj-y += timer.o
 obj-y += tsadc.o
-obj-$(CONFIG_SMP) += platsmp.o headsmp.o
-obj-$(CONFIG_HOTPLUG_CPU) += hotplug.o
 obj-$(CONFIG_LOCAL_TIMERS) += localtimer.o
-obj-$(CONFIG_PM) += pm.o
-obj-$(CONFIG_CPU_IDLE) += cpuidle.o
 ifeq ($(CONFIG_DVFS_WITH_UOC),y)
 obj-$(CONFIG_DVFS) += dvfs-rk3066b.o
 else
@@ -71,3 +71,4 @@ board-$(CONFIG_MACH_RK3168_FAC) += board-rk3168-fac.o
 obj-$(CONFIG_SOC_RK3168M) += board.o
 board-$(CONFIG_MACH_RK3168M_TB) += board-rk3168m-tb.o
 board-$(CONFIG_MACH_RK3168M_F304) += board-rk3168m-f304.o
+endif
