--- a/arch/arm/configs/rk30_chirimen_defconfig
+++ b/arch/arm/configs/rk30_chirimen_defconfig
@@ -31,7 +31,7 @@ CONFIG_RK29_VPU=y
 CONFIG_RK_CHECK_UACCESS=y
 CONFIG_TRACK_LOCALHOST=y
 CONFIG_ANDROID_KITKAT=y
-CONFIG_MACH_RK30_BOX=y
+CONFIG_MACH_RK30_CHIRIMEN=y
 CONFIG_FIQ_DEBUGGER=y
 CONFIG_FIQ_DEBUGGER_NO_SLEEP=y
 CONFIG_FIQ_DEBUGGER_CONSOLE=y
