--- a/arch/arm/configs/rk30_chirimen_defconfig
+++ b/arch/arm/configs/rk30_chirimen_defconfig
@@ -194,8 +194,6 @@ CONFIG_BT_HCIBCM4325=y
 CONFIG_BT_AUTOSLEEP=y
 CONFIG_CFG80211=y
 CONFIG_MAC80211=y
-CONFIG_RFKILL=y
-CONFIG_RFKILL_RK=y
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
 # CONFIG_FIRMWARE_IN_KERNEL is not set
@@ -209,6 +207,7 @@ CONFIG_BLK_DEV_LOOP=y
 CONFIG_MISC_DEVICES=y
 CONFIG_UID_STAT=y
 CONFIG_APANIC=y
+CONFIG_EEPROM_AT24=y
 CONFIG_SCSI=y
 CONFIG_BLK_DEV_SD=y
 CONFIG_SCSI_MULTI_LUN=y
@@ -249,18 +248,18 @@ CONFIG_INPUT_UINPUT=y
 # CONFIG_CONSOLE_TRANSLATIONS is not set
 # CONFIG_LEGACY_PTYS is not set
 CONFIG_SERIAL_RK29=y
-CONFIG_UART0_RK29=y
-CONFIG_UART0_CTS_RTS_RK29=y
-CONFIG_UART3_RK29=y
-CONFIG_UART3_CTS_RTS_RK29=y
 # CONFIG_HW_RANDOM is not set
 CONFIG_I2C=y
 # CONFIG_I2C_COMPAT is not set
+CONFIG_I2C_CHARDEV=y
 CONFIG_I2C0_CONTROLLER_RK30=y
 CONFIG_I2C1_CONTROLLER_RK30=y
-CONFIG_I2C2_CONTROLLER_RK30=y
-CONFIG_I2C3_CONTROLLER_RK30=y
+# CONFIG_I2C2_RK30 is not set
+# CONFIG_I2C3_RK30 is not set
 CONFIG_I2C4_CONTROLLER_RK30=y
+CONFIG_SPI=y
+CONFIG_SPIM_RK29=y
+CONFIG_SPI_SPIDEV=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_EXPANDED_GPIO_NUM=0
 CONFIG_EXPANDED_GPIO_IRQ_NUM=0
@@ -279,14 +278,18 @@ CONFIG_USB_VIDEO_CLASS=y
 CONFIG_ION=y
 CONFIG_ION_ROCKCHIP=y
 CONFIG_FB=y
+CONFIG_BACKLIGHT_LCD_SUPPORT=y
+# CONFIG_LCD_CLASS_DEVICE is not set
+CONFIG_BACKLIGHT_CLASS_DEVICE=y
+# CONFIG_BACKLIGHT_GENERIC is not set
 CONFIG_DISPLAY_SUPPORT=y
 CONFIG_FB_ROCKCHIP=y
-CONFIG_DISPLAY_KEY_LED_CONTROL=y
 CONFIG_LCDC_RK30=y
 # CONFIG_LCDC1_RK30 is not set
 CONFIG_BOX_FB_1080P=y
 CONFIG_RK_HDMI=y
 CONFIG_HDMI_RK30=y
+CONFIG_RK_HDMI_GPIO_CEC=y
 CONFIG_RGA_RK30=y
 CONFIG_LOGO=y
 # CONFIG_LOGO_LINUX_MONO is not set
@@ -300,9 +303,10 @@ CONFIG_SND=y
 CONFIG_SND_USB_AUDIO=y
 CONFIG_SND_SOC=y
 CONFIG_SND_RK29_SOC=y
-CONFIG_SND_I2SO_USE_EIGHT_CHANNELS=y
+CONFIG_SND_I2SO_USE_DOUBLE_CHANNELS=y
 CONFIG_SND_I2S_DMA_EVENT_STATIC=y
 CONFIG_SND_RK_SOC_HDMI_I2S=y
+CONFIG_SND_RK29_SOC_RT5631_PHONE=y
 CONFIG_SND_RK29_CODEC_SOC_SLAVE=y
 CONFIG_HID_A4TECH=y
 CONFIG_HID_ACRUX=y
@@ -375,9 +379,12 @@ CONFIG_MMC_UNSAFE_RESUME=y
 CONFIG_MMC_EMBEDDED_SDIO=y
 CONFIG_MMC_PARANOID_SD_INIT=y
 CONFIG_SDMMC_RK29=y
+# CONFIG_SDMMC1_RK29 is not set
 CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
 CONFIG_LEDS_GPIO=y
+CONFIG_LEDS_TRIGGERS=y
+CONFIG_LEDS_TRIGGER_TIMER=y
 CONFIG_SWITCH=y
 CONFIG_SWITCH_GPIO=y
 CONFIG_RTC_CLASS=y
@@ -386,7 +393,6 @@ CONFIG_STAGING=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_LOGGER=y
-CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ZSMALLOC=y
 CONFIG_ZRAM=y
