--- a/arch/arm/configs/rk30_chirimen_defconfig
+++ b/arch/arm/configs/rk30_chirimen_defconfig
@@ -254,7 +254,7 @@ CONFIG_I2C=y
 CONFIG_I2C_CHARDEV=y
 CONFIG_I2C0_CONTROLLER_RK30=y
 CONFIG_I2C1_CONTROLLER_RK30=y
-# CONFIG_I2C2_RK30 is not set
+CONFIG_I2C2_CONTROLLER_RK30=y
 # CONFIG_I2C3_RK30 is not set
 CONFIG_I2C4_CONTROLLER_RK30=y
 CONFIG_SPI=y
