--- a/arch/arm/configs/rk30_openwebboard_defconfig
+++ b/arch/arm/configs/rk30_openwebboard_defconfig
@@ -28,14 +28,11 @@ CONFIG_DDR_FREQ=y
 # CONFIG_DDR_TEST is not set
 CONFIG_RK_CLOCK_PROC=y
 CONFIG_RK29_VPU=y
+CONFIG_RK_DEBUG_UART=-1
 CONFIG_RK_CHECK_UACCESS=y
 CONFIG_TRACK_LOCALHOST=y
 CONFIG_ANDROID_KITKAT=y
 CONFIG_MACH_RK30_OPENWEBBOARD=y
-CONFIG_FIQ_DEBUGGER=y
-CONFIG_FIQ_DEBUGGER_NO_SLEEP=y
-CONFIG_FIQ_DEBUGGER_CONSOLE=y
-CONFIG_FIQ_DEBUGGER_CONSOLE_DEFAULT_ENABLE=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_SMP=y
@@ -250,16 +247,16 @@ CONFIG_INPUT_UINPUT=y
 CONFIG_SERIAL_RK29=y
 CONFIG_UART0_RK29=y
 CONFIG_UART0_CTS_RTS_RK29=y
-CONFIG_UART3_RK29=y
-CONFIG_UART3_CTS_RTS_RK29=y
 # CONFIG_HW_RANDOM is not set
 CONFIG_I2C=y
 # CONFIG_I2C_COMPAT is not set
+CONFIG_I2C_CHARDEV=y
 CONFIG_I2C0_CONTROLLER_RK30=y
 CONFIG_I2C1_CONTROLLER_RK30=y
-CONFIG_I2C2_CONTROLLER_RK30=y
-CONFIG_I2C3_CONTROLLER_RK30=y
-CONFIG_I2C4_CONTROLLER_RK30=y
+# CONFIG_I2C2_RK30 is not set
+# CONFIG_I2C3_RK30 is not set
+# CONFIG_I2C4_RK30 is not set
+CONFIG_I2C_GPIO_RK30=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_EXPANDED_GPIO_NUM=0
 CONFIG_EXPANDED_GPIO_IRQ_NUM=0
@@ -280,12 +277,12 @@ CONFIG_ION_ROCKCHIP=y
 CONFIG_FB=y
 CONFIG_DISPLAY_SUPPORT=y
 CONFIG_FB_ROCKCHIP=y
-CONFIG_DISPLAY_KEY_LED_CONTROL=y
 CONFIG_LCDC_RK30=y
 # CONFIG_LCDC1_RK30 is not set
 CONFIG_BOX_FB_1080P=y
 CONFIG_RK_HDMI=y
 CONFIG_HDMI_RK30=y
+CONFIG_RK_HDMI_GPIO_CEC=y
 CONFIG_RGA_RK30=y
 CONFIG_LOGO=y
 # CONFIG_LOGO_LINUX_MONO is not set
@@ -373,10 +370,13 @@ CONFIG_MMC=y
 CONFIG_MMC_UNSAFE_RESUME=y
 CONFIG_MMC_EMBEDDED_SDIO=y
 CONFIG_MMC_PARANOID_SD_INIT=y
+# CONFIG_MMC_BLOCK is not set
 CONFIG_SDMMC_RK29=y
+# CONFIG_SDMMC0_RK29 is not set
 CONFIG_NEW_LEDS=y
 CONFIG_LEDS_CLASS=y
-CONFIG_LEDS_GPIO=y
+CONFIG_LEDS_TRIGGERS=y
+CONFIG_LEDS_TRIGGER_TIMER=y
 CONFIG_SWITCH=y
 CONFIG_SWITCH_GPIO=y
 CONFIG_RTC_CLASS=y
@@ -385,7 +385,6 @@ CONFIG_STAGING=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_LOGGER=y
-CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ZSMALLOC=y
 CONFIG_ZRAM=y
