add/use CHIRIMEN logo
for https://github.com/chirimen-oh/any-issues/issues/114

--- a/drivers/video/logo/Makefile
+++ b/drivers/video/logo/Makefile
@@ -18,6 +18,7 @@ obj-$(CONFIG_LOGO_SUPERH_CLUT224)	+= logo_superh_clut224.o
 obj-$(CONFIG_LOGO_M32R_CLUT224)		+= logo_m32r_clut224.o
 obj-$(CONFIG_LOGO_G3_CLUT224)		+= logo_g3_clut224.o
 obj-$(CONFIG_LOGO_LINUX_800x480_CLUT224)        += logo_linux_800x480_clut224.o
+obj-$(CONFIG_LOGO_CHIRIMEN_CLUT224)	+= logo_chirimen_clut224.o
 obj-$(CONFIG_LOGO_LINUX_BMP_SUNSET)	+= logo_sunset_bmp.o
 obj-$(CONFIG_LOGO_LINUX_BMP_ANDROID)     += logo_android_bmp.o
 obj-$(CONFIG_LOGO_LOWERPOWER_WARNING)   += logo_linux_lowerpower_clut224.o
