--- a/drivers/video/logo/Kconfig
+++ b/drivers/video/logo/Kconfig
@@ -98,6 +98,10 @@ config LOGO_LINUX_800x480_CLUT224
         bool "Standard 224-color 800x480 Linux logo "
         default n
 
+config LOGO_CHIRIMEN_CLUT224
+	bool "Standard 224-color CHIRIMEN logo"
+	default n
+
 config LOGO_LOWERPOWER_WARNING
         bool "warning: lowerpower when poweron"
         default n
