CHIRIMEN: disable backlight driver
for https://github.com/chirimen-oh/any-issues/issues/170

--- a/arch/arm/configs/rk30_chirimen_defconfig
+++ b/arch/arm/configs/rk30_chirimen_defconfig
@@ -282,6 +282,7 @@ CONFIG_BACKLIGHT_LCD_SUPPORT=y
 # CONFIG_LCD_CLASS_DEVICE is not set
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 # CONFIG_BACKLIGHT_GENERIC is not set
+# CONFIG_BACKLIGHT_RK29_BL is not set
 CONFIG_DISPLAY_SUPPORT=y
 CONFIG_FB_ROCKCHIP=y
 CONFIG_LCDC_RK30=y
